# nsca

./: .gitignore  CHANGELOG.md  CONTRIBUTORS.md  Changelog  Makefile.in  README  README.md  SECURITY  SECURITY.md  aclocal.m4  configure  configure.ac  configure.in  init-script  init-script.in  nsca.cfg  nsca.cfg.in  nsca.service.in  nsca.spec  nsca.xinetd.in  send_nsca.cfg  subst.in  update-version
common/: common.h  config.h.in
include/: common.h  config.h.in  netutils.h  nsca.h  utils.h
nsca_tests/: NSCATest.pm  README  basic.t  multiple.t  nsca_basic.cfg  runtests  send_basic.cfg  simultaneous.t
nsca_tests/var/: README
package/solaris/: Makefile.in
package/solaris/pkg/: postinstall
sample-config/: nsca.cfg.in  nsca.xinetd.in  send_nsca.cfg.in
src/: Makefile.in  netutils.c  netutils.h  netutils.h.in  nsca.c  send_nsca.c  utils.c  utils.h
